# EasyRemote

./: .gitignore  CODE_REFACTORING_SUMMARY.md  LICENSE  MANIFEST.in  NOTICE.md  README.md  README_zh.md  project.bat  pyproject.toml  setup.py  setup_simple.py  tmp.py
docs/: API_DESIGN.md  EASYNET_USAGE.md  MCP_EVOLUTION_BLUEPRINT.md  PARADIGM_POSITIONING_STRATEGY.md  README.md  RECONNECTION_GUIDE.md
docs/ai/: mcp-integration.md
docs/architecture/: three_role_architecture.md
docs/design/: EASYNET_MASTER_ARCHITECTURE.md  MCP_ARCHITECTURE_COMPARISON.md  MCP_COMPATIBILITY_STRATEGY.md  PARADIGM_EVOLUTION_FRAMEWORK.md  PHASE1_AGENT_IMPLEMENTATION.md  architecture.md  load_balancing.md  overview.md  roles.md  scenarios.md
docs/development/: CODE_REFACTORING_SUMMARY.md  MODULE_REFACTORING_SUMMARY.md  NODES_REFACTORING_SUMMARY.md  PROTOBUF_FIX_REPORT.md  REFACTORING_FIXES.md  RESIDUAL_CODE_FIXES.md  TOOLS_REFACTORING_SUMMARY.md  roadmap.md
docs/en/: README.md
docs/zh/: README.md
easyremote/: __init__.py  compute_node copy.py  compute_node.py  decorators copy.py  decorators.py  exceptions.py  server.py  test_optimizations.py  utils.py
easyremote.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
easyremote/cli/: __init__.py  accelerator.py  config.py  easynet.py
easyremote/core/: __init__.py  config.py
easyremote/nodes/: server.py
easyremote/protos/: service copy.proto  service.proto
examples/: compute_node.py  test_client.py  test_error_handling.py  vps_server.py
go/: build.bat  build.sh  go.mod  go.sum  kitex_info.yaml
python/: example.py  setup.py
(+99 files in other folders)
