# pyproject.toml
[build-system]
requires = ["setuptools>=45", "wheel", "grpcio-tools"]
build-backend = "setuptools.build_meta"

[project]
name = "easyremote"
version = "0.1.0"
description = "Easy remote function execution framework"
readme = "README.md"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "grpcio>=1.51.0",
    "protobuf>=4.21.0",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/Qingbolan/easyremote"